# GLMoneyModernGUI

./: CMakeLists.txt  GLMoneyModernGUI.qmlproject  GLMoneyModernGUI.qmlproject.qtds  README.md  qmlmodules
content/: App.qml  CMakeLists.txt  CoreWindow.qml  CoreWindowForm.ui.qml  IncomesAndExpenses.qml  IncomesAndExpensesForm.ui.qml  MainWindow.ui.qml  NavBar.qml  NavBarForm.ui.qml  StartPage.qml  StartPageForm.ui.qml
content/IncomesAndExpenses/: CMakeLists.txt  Category.qml  CategoryForm.ui.qml  Dictionaries.qml  DictionariesForm.ui.qml  IaEFirstStep.qml  IaEFirstStepForm.ui.qml  IaESecondStep.qml  IaESecondStepForm.ui.qml  IaEThirdStep.qml  IaEThirdStepForm.ui.qml  Member.qml  MemberForm.ui.qml  NewCategory.qml
content/Utils/: CMakeLists.txt  DatePicker.qml  DatePickerForm.ui.qml  MessageBox.qml  MessageBoxForm.ui.qml
imports/: CMakeLists.txt
imports/GLMoneyModernGUI/: CMakeLists.txt  Constants.qml  qmldir
imports/GLMoneyModernGUI/designer/: plugin.metainfo
src/: DataStructs.cpp  DataStructs.hpp  databasecursor.cpp  databasecursor.hpp  import_qml_plugins.h  main.cpp  transaction.cpp  transaction.hpp
src/import/: importcsvwindow.cpp  importcsvwindow.hpp  importcsvwindow.ui
